--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -16,19 +16,20 @@
     <body>
         <div class="navbar">
             <div class="navbar-logo">
-                <img src="/images/O3DE-Logo-REV-Mono.svg" class="logo"/>
+                <img src="../images/O3DE-Logo-REV-Mono.svg" class="logo"/>
                 <div class="logo-subtitle">BINARIES</div>
             </div>
             <div class="navbar-os">
                 <a href="windows.html" class="os-button">WINDOWS</a>
                 <span class="os-button current">LINUX</span>
+                <a href="demos.html" class="os-button">DEMOS</a>
             </div>
         </div>
         <div class="content">
             <div class="container">
                 <h1>Install Open 3D Engine for Linux</h1>
                 <h3>Thank you for downloading the O3DE Debian Package</h3>
-                <p>By downloading these files, you agree to the <a href="/license.html" target="_blank">End User License Agreement</a>.</p>
+                <p>By downloading these files, you agree to the <a href="../license.html" target="_blank">End User License Agreement</a>.</p>
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2305_0.deb" class="btn">Download v23.05.0 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2305_0.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
@@ -42,7 +43,7 @@
         <div class="footer">
             <div class="container">
                 <div class="footer-logo">
-                    <img src="/images/O3DE-Logo-REV-Mono.svg" class="logo"/>
+                    <img src="../images/O3DE-Logo-REV-Mono.svg" class="logo"/>
                     <div class="logo-subtitle">BINARIES</div>
                 </div>
                 <p>Copyright &copy; 2022 Open 3D Engine Binaries | Documentation Distributed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0.</a></p>
