--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -31,12 +31,12 @@
                 <h3>Thank you for downloading the O3DE Windows Installer</h3>
                 <p>By downloading these files, you agree to the <a href="../license.html" target="_blank">End User License Agreement</a>.</p>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2305_0.exe" class="btn">Download v23.05.0 Release</a>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2305_1.exe" class="btn">Download v23.05.1 Release</a>
                 </p>
 				<br/>
 				<p class="small-note">
 					Try out features and fixes currently in development by downloading the <a href="https://o3debinaries.org/development/Latest/Windows/o3de_installer.exe">Nightly Development Build here</a>. 
-					Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch. These builds contain untested features and possible bugs.
+                    <br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
 				</p>
             </div>
         </div>
