--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -31,7 +31,7 @@
                 <h3>Thank you for downloading the O3DE Windows Installer</h3>
                 <p>By downloading these files, you agree to the <a href="../license.html" target="_blank">End User License Agreement</a>.</p>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_1.exe" class="btn">Download v23.10.1 Release</a>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_2.exe" class="btn">Download v23.10.2. Release</a>
                 </p>
 				<br/>
 				<p class="small-note">
