Add stabilization preview button and format changes
Signed-off-by: Mike <changml@amazon.com>

--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -33,8 +33,12 @@
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_3.exe" class="btn">Download v23.10.3 Release</a>
                 </p>
+                <p>If you want to try a preview of the upcoming release</p>
+                <p>
+                    <a href="https://o3debinaries.org/stabilization-2409/Latest/Windows/o3de_installer.exe" class="btn">Download v24.09.0 Preview</a>
+                </p>
 				<br/>
-				<p class="small-note">
+				<p class="note">
 					Try out features and fixes currently in development by downloading the <a href="https://o3debinaries.org/development/Latest/Windows/o3de_installer.exe">Nightly Development Build here</a>. 
                     <br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
 				</p>
