--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -30,13 +30,33 @@
                 <h1>Install Open 3D Engine for Windows</h1>
                 <h3>Thank you for downloading the O3DE Windows Installer</h3>
                 <p>By downloading these files, you agree to the <a href="../license.html" target="_blank">End User License Agreement</a>.</p>
+                <br>
+                <h3>Latest version</h3>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1.exe" class="btn">Download v24.09.1 Release</a>
+                </p>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1-offline.zip" class="btn">Download v24.09.1 Release - Offline</a>
+                </p>
+                <p><a href="https://www.docs.o3de.org/docs/release-notes/2409-1-release-notes/" target="_blank">Release notes for v.24.09.1</a></p>
+                <br>
+                <h3>Older versions</h3>
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_0.exe" class="btn">Download v24.09.0 Release</a>
                 </p>
-                <br></br>
-				<br/>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_0-offline.zip" class="btn">Download v24.09.0 Release - Offline</a>
+                </p>
+                <p><a href="https://www.docs.o3de.org/docs/release-notes/2409-release-notes/" target="_blank">Release notes for v.24.09.0</a></p>
+                <br>
+                <br>
+                <h3>Optional downloads</h3>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer-3rdParty-offline.zip" class="btn">Download Windows 3rdParty - Offline</a>
+                </p>
+                <br>
 				<p class="note">
-					Try out features and fixes currently in development by downloading the <a href="https://o3debinaries.org/development/Latest/Windows/o3de_installer.exe">Nightly Development Build here</a>. 
+					Try out features and fixes currently in development by downloading the <a href="https://o3debinaries.org/development/Latest/Windows/o3de_installer.exe">Nightly Development Build</a>. 
                     <br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
 				</p>
             </div>
