--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -30,13 +30,26 @@
                 <h1>Install Open 3D Engine for Linux</h1>
                 <h3>Thank you for downloading the O3DE Debian Package</h3>
                 <p>By downloading these files, you agree to the <a href="../license.html" target="_blank">End User License Agreement</a>.</p>
+                <br>
+                <h3>Latest version</h3>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb" class="btn">Download v24.09.1 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
+                </p>
+                <p><a href="https://www.docs.o3de.org/docs/release-notes/2409-1-release-notes/" target="_blank">Release notes for v.24.09.1</a></p>
+                <br>
+                <h3>Older versions</h3>                
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_0.deb" class="btn">Download v24.09.0 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_0.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
-                <br></br>          
-				<br/>
+                <p><a href="https://www.docs.o3de.org/docs/release-notes/2409-release-notes/" target="_blank">Release notes for v.24.09.0</a></p>
+                <br>
+                <h3>Optional downloads</h3>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer-3rdParty-offline.zip" class="btn">Download Linux 3rdParty - Offline</a>
+                </p>
+                <br>
 				<p class="note">
-					Try out features and fixes currently in development by downloading the Nightly Development Build here: <a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb">Debian Package</a> (<a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a>) 
+					Try out features and fixes currently in development by downloading the Nightly Development Build: <a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb">Debian Package</a> (<a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a>) 
 					<br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
 				</p>
             </div>
