--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -39,13 +39,13 @@
                 <br>
                 <h3>Older versions</h3>                
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_0.deb" class="btn">Download v24.09.0 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_0.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2310_3.deb" class="btn">Download v23.10.3 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2310_3.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
-                <p><a href="https://www.docs.o3de.org/docs/release-notes/2409-release-notes/" target="_blank">Release notes for v.24.09.0</a></p>
+                <p><a href="https://www.docs.o3de.org/docs/release-notes/2310-1-release-notes/" target="_blank">Release notes for v23.10</a></p>
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer-3rdParty-offline.zip" class="btn">Download Linux 3rdParty - Offline</a>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer_2409_1-3rdParty-offline.zip" class="btn">Download Linux 3rdParty - Offline</a>
                 </p>
                 <br>
                 <p class="note">
