Update Windows title
Signed-off-by: Mike <changml@amazon.com>

Signed-off-by: Mike Chang <changml@amazon.com>

--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Open 3D Engine - Windows 10 Installer Download</title>
+        <title>Open 3D Engine - Windows Installer Download</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="title" content="Open 3D Engine - Windows Installer Download">
