Update release note links
Signed-off-by: Mike <changml@amazon.com>

Signed-off-by: Mike Chang <changml@amazon.com>

--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -35,13 +35,13 @@
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb" class="btn">Download v24.09.1 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
-                <p><a href="https://www.docs.o3de.org/docs/release-notes/2409-1-release-notes/" target="_blank">Release notes for v.24.09.1</a></p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
                 <br>
                 <h3>Older versions</h3>                
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2310_3.deb" class="btn">Download v23.10.3 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2310_3.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
-                <p><a href="https://www.docs.o3de.org/docs/release-notes/archive/2310-1-release-notes/" target="_blank">Release notes for v23.10</a></p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/23.10.3/23103%20Release%20Notes.md" target="_blank">Release notes for v23.10.3</a></p>
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
