--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -38,7 +38,7 @@
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1-offline.zip" class="btn">Download v24.09.1 Release - Offline</a>
                 </p>
-                <p><a href="https://www.docs.o3de.org/docs/release-notes/2409-1-release-notes/" target="_blank">Release notes for v.24.09.1</a></p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
                 <br>
                 <h3>Older versions</h3>
                 <p>
@@ -47,7 +47,7 @@
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_3-offline.zip" class="btn">Download v23.10.3 Release - Offline</a>
                 </p>
-                <p><a href="https://www.docs.o3de.org/docs/release-notes/archive/2310-1-release-notes/" target="_blank">Release notes for v.23.10</a></p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/23.10.3/23103%20Release%20Notes.md" target="_blank">Release notes for v23.10.3</a></p>
                 <br>
                 <br>
                 <h3>Optional downloads</h3>
