Update offline 3rdParty linux to tar.gz

--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -45,7 +45,7 @@
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer_2409_1-3rdParty-offline.zip" class="btn">Download Linux 3rdParty - Offline</a>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer_2409_1-3rdParty-offline.tar.gz" class="btn">Download Linux 3rdParty - Offline</a>
                 </p>
                 <br>
                 <p class="note">
