Point Release 2409.1 page updates (#25)
* Point Release 23103 page updates (#17)

Signed-off-by: Mike Chang <changml@amazon.com>
Signed-off-by: Mike <changml@amazon.com>

--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -30,15 +30,28 @@
                 <h1>Install Open 3D Engine for Linux</h1>
                 <h3>Thank you for downloading the O3DE Debian Package</h3>
                 <p>By downloading these files, you agree to the <a href="../license.html" target="_blank">End User License Agreement</a>.</p>
+                <br>
+                <h3>Latest version</h3>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_0.deb" class="btn">Download v24.09.0 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_0.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb" class="btn">Download v24.09.1 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
-                <br></br>          
-				<br/>
-				<p class="note">
-					Try out features and fixes currently in development by downloading the Nightly Development Build here: <a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb">Debian Package</a> (<a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a>) 
-					<br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
-				</p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
+                <br>
+                <h3>Older versions</h3>                
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2310_3.deb" class="btn">Download v23.10.3 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2310_3.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
+                </p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/23.10.3/23103%20Release%20Notes.md" target="_blank">Release notes for v23.10.3</a></p>
+                <br>
+                <h3>Optional downloads</h3>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer_2409_1-3rdParty-offline.tar.gz" class="btn">Download Linux 3rdParty - Offline</a>
+                </p>
+                <br>
+                <p class="note">
+                  Try out features and fixes currently in development by downloading the Nightly Development Build: <a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb">Debian Package</a> (<a href="https://o3debinaries.org/development/Latest/Linux/o3de_latest.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a>) 
+                  <br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
+                </p>
             </div>
         </div>
         <div class="footer">
