--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Open 3D Engine - Windows 10 Installer Download</title>
+        <title>Open 3D Engine - Windows Installer Download</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="title" content="Open 3D Engine - Windows Installer Download">
@@ -30,15 +30,35 @@
                 <h1>Install Open 3D Engine for Windows</h1>
                 <h3>Thank you for downloading the O3DE Windows Installer</h3>
                 <p>By downloading these files, you agree to the <a href="../license.html" target="_blank">End User License Agreement</a>.</p>
+                <br>
+                <h3>Latest version</h3>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_0.exe" class="btn">Download v24.09.0 Release</a>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1.exe" class="btn">Download v24.09.1 Release</a>
                 </p>
-                <br></br>
-				<br/>
-				<p class="note">
-					Try out features and fixes currently in development by downloading the <a href="https://o3debinaries.org/development/Latest/Windows/o3de_installer.exe">Nightly Development Build here</a>. 
-                    <br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
-				</p>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1-offline.zip" class="btn">Download v24.09.1 Release - Offline</a>
+                </p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
+                <br>
+                <h3>Older versions</h3>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_3.exe" class="btn">Download v23.10.3 Release</a>
+                </p>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_3-offline.zip" class="btn">Download v23.10.3 Release - Offline</a>
+                </p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/23.10.3/23103%20Release%20Notes.md" target="_blank">Release notes for v23.10.3</a></p>
+                <br>
+                <br>
+                <h3>Optional downloads</h3>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1-3rdParty-offline.zip" class="btn">Download Windows 3rdParty - Offline</a>
+                </p>
+                <br>
+                <p class="note">
+                  Try out features and fixes currently in development by downloading the <a href="https://o3debinaries.org/development/Latest/Windows/o3de_installer.exe">Nightly Development Build</a>. 
+                  <br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
+                </p>
             </div>
         </div>
         <div class="footer">
