Point Release 2409.2 page updates
Signed-off-by: Mike Chang <changml@amazon.com>

--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -33,6 +33,15 @@
                 <br>
                 <h3>Latest version</h3>
                 <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_2.exe" class="btn">Download v24.09.2 Release</a>
+                </p>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_2-offline.zip" class="btn">Download v24.09.2 Release - Offline</a>
+                </p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.2/24.09.2.md" target="_blank">Release notes for v24.09.2</a></p>
+                <br>
+                <h3>Older versions</h3>
+                <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1.exe" class="btn">Download v24.09.1 Release</a>
                 </p>
                 <p>
@@ -40,19 +49,10 @@
                 </p>
                 <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
                 <br>
-                <h3>Older versions</h3>
-                <p>
-                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_3.exe" class="btn">Download v23.10.3 Release</a>
-                </p>
-                <p>
-                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2310_3-offline.zip" class="btn">Download v23.10.3 Release - Offline</a>
-                </p>
-                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/23.10.3/23103%20Release%20Notes.md" target="_blank">Release notes for v23.10.3</a></p>
-                <br>
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1-3rdParty-offline.zip" class="btn">Download Windows 3rdParty - Offline</a>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_2-3rdParty-offline.zip" class="btn">Download Windows 3rdParty - Offline</a>
                 </p>
                 <br>
                 <p class="note">
