Updated messaging for preview release
Signed-off-by: Mike Chang <changml@amazon.com>

--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -54,6 +54,10 @@
                 <p>
                     <a href="https://o3debinaries.org/stabilization-25050/Latest/Windows/o3de_installer.exe" class="btn">Download v25.05.0 Preview</a>
                 </p>
+                <p class="note">
+                    Help us improve the upcoming release by reporting bugs in our issue tracker (https://github.com/o3de/o3de/issues)
+                </p>
+                </p>
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
