--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -47,6 +47,9 @@
                 <p>
                     <a href="https://o3debinaries.org/stabilization-25050/Latest/Linux/o3de_latest.deb" class="btn">Download v25.05.0 Preview</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/stabilization-25050/Latest/Linux/o3de_latest.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
+                <p class="note">
+                    Help us improve the upcoming release by reporting bugs in our issue tracker (https://github.com/o3de/o3de/issues)
+                </p>
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
