Make links clickable
Signed-off-by: Mike Chang <changml@amazon.com>

--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -55,7 +55,7 @@
                     <a href="https://o3debinaries.org/stabilization-25050/Latest/Windows/o3de_installer.exe" class="btn">Download v25.05.0 Preview</a>
                 </p>
                 <p class="note">
-                    Help us improve the upcoming release by reporting bugs in our issue tracker (https://github.com/o3de/o3de/issues)
+                    Help us improve the upcoming release by reporting bugs in our <a href="https://github.com/o3de/o3de/issues">issue tracker</a>
                 </p>
                 </p>
                 <br>
