--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -49,12 +49,21 @@
                 </p>
                 <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
                 <br>
+                </p>
+                <h3>If you want to try a preview of the upcoming release</h3>
+                <p>
+                    <a href="https://o3debinaries.org/stabilization-25050/Latest/Windows/o3de_installer.exe" class="btn">Download v25.05.0 Preview</a>
+                </p>
+                <p class="note">
+                    Help us improve the upcoming release by reporting bugs in our <a href="https://github.com/o3de/o3de/issues">issue tracker</a>
+                </p>
+                </p>
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_2-3rdParty-offline.zip" class="btn">Download Windows 3rdParty - Offline</a>
                 </p>
-                <br>
+                <br/>
                 <p class="note">
                   Try out features and fixes currently in development by downloading the <a href="https://o3debinaries.org/development/Latest/Windows/o3de_installer.exe">Nightly Development Build</a>. 
                   <br>Note: These nightly builds are created automatically from the latest source code revisions in the O3DE development branch, which may contain untested features and possible bugs.</br>
