--- a/src/download/windows.html
+++ b/src/download/windows.html
@@ -33,6 +33,15 @@
                 <br>
                 <h3>Latest version</h3>
                 <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2505_0.exe" class="btn">Download v25.05.0 Release</a>
+                </p>
+                <p>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2505_0-offline.zip" class="btn">Download v25.05.0 Release - Offline</a>
+                </p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/25.05.0/25.05.0.md" target="_blank">Release notes for v25.05.0</a></p>
+                <br>
+                <h3>Older versions</h3>
+                <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_2.exe" class="btn">Download v24.09.2 Release</a>
                 </p>
                 <p>
@@ -40,7 +49,6 @@
                 </p>
                 <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.2/24.09.2.md" target="_blank">Release notes for v24.09.2</a></p>
                 <br>
-                <h3>Older versions</h3>
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_1.exe" class="btn">Download v24.09.1 Release</a>
                 </p>
@@ -50,10 +58,6 @@
                 <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
                 <br>
                 </p>
-                <h3>If you want to try a preview of the upcoming release</h3>
-                <p>
-                    <a href="https://o3debinaries.org/stabilization-25050/Latest/Windows/o3de_installer.exe" class="btn">Download v25.05.0 Preview</a>
-                </p>
                 <p class="note">
                     Help us improve the upcoming release by reporting bugs in our <a href="https://github.com/o3de/o3de/issues">issue tracker</a>
                 </p>
@@ -61,7 +65,7 @@
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2409_2-3rdParty-offline.zip" class="btn">Download Windows 3rdParty - Offline</a>
+                    <a href="https://o3debinaries.org/main/Latest/Windows/o3de_installer_2505_0-3rdParty-offline.zip" class="btn">Download Windows 3rdParty - Offline</a>
                 </p>
                 <br/>
                 <p class="note">
