--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -33,27 +33,28 @@
                 <br>
                 <h3>Latest version</h3>
                 <p>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2505_0.deb" class="btn">Download v25.05.0 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2505_0.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
+                </p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/25.05.0/25.05.0.md" target="_blank">Release notes for v25.05.0</a></p>
+                <br>
+                <h3>Older versions</h3>     
+                <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_2.deb" class="btn">Download v24.09.2 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_2.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
                 <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.2/24.09.2.md" target="_blank">Release notes for v24.09.2</a></p>
-                <br>
-                <h3>Older versions</h3>                
+                <br>           
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb" class="btn">Download v24.09.1 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_1.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
                 <p><a href="https://github.com/o3de/sig-release/blob/main/releases/24.09.1/24.09.1.md" target="_blank">Release notes for v24.09.1</a></p>
                 <br>
-                <h3>If you want to try a preview of the upcoming release</h3>
-                <p>
-                    <a href="https://o3debinaries.org/stabilization-25050/Latest/Linux/o3de_latest.deb" class="btn">Download v25.05.0 Preview</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/stabilization-25050/Latest/Linux/o3de_latest.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
-                </p>
                 <p class="note">
                     Help us improve the upcoming release by reporting bugs in our <a href="https://github.com/o3de/o3de/issues">issue tracker</a>
                 </p>
                 <br>
                 <h3>Optional downloads</h3>
                 <p>
-                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer_2409_1-3rdParty-offline.tar.gz" class="btn">Download Linux 3rdParty - Offline</a>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_installer_2505_0-3rdParty-offline.tar.gz" class="btn">Download Linux 3rdParty - Offline</a>
                 </p>
                 <br>
                 <p class="note">
