--- a/src/download/linux.html
+++ b/src/download/linux.html
@@ -33,11 +33,16 @@
                 <br>
                 <h3>Latest version</h3>
                 <p>
+                    <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2505_1.deb" class="btn">Download v25.05.1 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2505_1.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
+                </p>
+                <p><a href="https://github.com/o3de/sig-release/blob/main/releases/25.05.1/25.05.1.md" target="_blank">Release notes for v25.05.1</a></p>
+                <br>
+                <h3>Older versions</h3>
+                <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2505_0.deb" class="btn">Download v25.05.0 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2505_0.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
                 <p><a href="https://github.com/o3de/sig-release/blob/main/releases/25.05.0/25.05.0.md" target="_blank">Release notes for v25.05.0</a></p>
-                <br>
-                <h3>Older versions</h3>     
+                <br> 
                 <p>
                     <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_2.deb" class="btn">Download v24.09.2 Release</a><span class="additional-download-url">Additional Downloads: <a href="https://o3debinaries.org/main/Latest/Linux/o3de_2409_2.deb.sha256">SHA256</a> <a href="https://o3debinaries.org/main/Latest/Linux/o3de-releases.gpg">GPG</a></span>
                 </p>
